// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`css > should transform 1`] = `
"import { useSolidStyled as _useSolidStyled } from \\"solid-styled\\";
import { createCSSVars as _createCSSVars } from \\"solid-styled\\";
import { css } from 'solid-styled';
const _sheet = \\"c-f0b3b6fa-0\\";
const _css = \\"h1[s\\\\\\\\:c-f0b3b6fa-0]{color:red}\\";
export default function Example() {
  const _vars = _createCSSVars();
  _useSolidStyled(_sheet, 1, _css);
  return <h1 s:c-f0b3b6fa-0 style={_vars()}>Hello World</h1>;
}"
`;

exports[`css > should transform dynamic templates 1`] = `
"import { useSolidStyled as _useSolidStyled } from \\"solid-styled\\";
import { createCSSVars as _createCSSVars } from \\"solid-styled\\";
import { css } from 'solid-styled';
const _sheet = \\"c-f0b3b6fa-0\\";
const _css = \\"h1[s\\\\\\\\:c-f0b3b6fa-0]{color:var(--s-v-f0b3b6fa-1)}\\";
export default function Example(props) {
  const _vars = _createCSSVars();
  _useSolidStyled(_sheet, 1, _css), _vars(() => ({
    \\"--s-v-f0b3b6fa-1\\": props.color
  }));
  return <h1 s:c-f0b3b6fa-0 style={_vars()}>Hello World</h1>;
}"
`;

exports[`css > should work with multiple templates 1`] = `
"import { useSolidStyled as _useSolidStyled } from \\"solid-styled\\";
import { createCSSVars as _createCSSVars } from \\"solid-styled\\";
import { css } from 'solid-styled';
const _sheet = \\"c-f0b3b6fa-0\\";
const _css = \\"h1[s\\\\\\\\:c-f0b3b6fa-0]{color:red}\\";
const _css2 = \\"h2[s\\\\\\\\:c-f0b3b6fa-0]{color:#00f}\\";
export default function Example() {
  const _vars = _createCSSVars();
  _useSolidStyled(_sheet, 1, _css);
  _useSolidStyled(_sheet, 2, _css2);
  return <>
      <h1 s:c-f0b3b6fa-0 style={_vars()}>Hello World</h1>
      <h2 s:c-f0b3b6fa-0 style={_vars()}>Hello World</h2>
    </>;
}"
`;
